fixed assets locations fixed Google login page test (got updated)