@@ -254,6 +254,7 @@
                 <configuration>
                     <productVersion>${jira.version}</productVersion>
                     <productDataVersion>${jira.version}</productDataVersion>
+                    <jvmArgs>-Xmx768m -XX:MaxPermSize=300m -Djavax.net.ssl.trustStore=/Library/Java/JavaVirtualMachines/1.7.0.jdk/Contents/Home/jre/lib/security/cacerts</jvmArgs>
                     <!-- Uncomment to install TestKit backdoor in JIRA. -->
 					<pluginArtifacts>
 						<pluginArtifact>
